--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <div class="row">
                 <div class="col-sm-12 col-md-12 col-xs-12 mx-auto">
                     <ul>
-                        <li class="active">
-                            <a href="">
+                        <li>
+                            <a href="" class="active">
                                 Lorem
                             </a>
                         </li>
@@ -53,15 +53,60 @@
     <main>
         <div class="container">
             <div class="row">
-
+                <div  class="col-sm-4 col-md-4 col-xs-4 mx-auto">
+                    <div class="imageBoard">
+                        <img src="src/0Lh4vbd2yOw.jpg" alt="">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem saepe exercitationem atque, officia nemo nobis?</p>
+                    </div>
+                </div>
+                <div  class="col-sm-4 col-md-4 col-xs-4 mx-auto">
+                    <div class="imageBoard">
+                        <img src="src/0Lh4vbd2yOw.jpg" alt="">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem saepe exercitationem atque, officia nemo nobis?</p>
+                    </div>
+                </div>
+                <div  class="col-sm-12 col-md-4 col-xs-4 mx-auto">
+                    <div class="imageBoard">
+                        <img src="src/0Lh4vbd2yOw.jpg" alt="">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem saepe exercitationem atque, officia nemo nobis?</p>
+                    </div>
+                </div>
+            </div>
+            <hr />
+            <div class="row">
+                <div class="col-sm-12 col-md-12 col-xs-12 mx-auto">
+                    <h5 style="margin: 20px; text-transform: uppercase; width: auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit totam, id temporibus hic nostrum dolor assumenda!</h5>    
+                </div>
+                <div class="col-sm-12 col-md-12 col-xs-12 mx-auto">
+                    <iframe style="margin: 20px" width="560" height="315" src="https://www.youtube.com/embed/skl6N3zGv-s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </div>
+            <hr />
+            <div class="circles">
+                <div class="row">
+                    <div class="col-sm-12 col-md-3 col-xs-3 mx-auto">
+                        <h6>A</h6>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                    </div>
+                    <div class="col-sm-12 col-md-3 col-xs-3 mx-auto">
+                        <h6>A</h6>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                    </div>
+                    <div class="col-sm-12 col-md-3 col-xs-3 mx-auto">
+                        <h6>A</h6>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                    </div>
+                    <div class="col-sm-12 col-md-3 col-xs-3 mx-auto">
+                        <h6>A</h6>
+                        <p>Lorem ipsum dolor sit amet.</p>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
     <footer>
-        <div class="container">
-            <div class="row">
-
-            </div>
+        <div>
+            
         </div>
     </footer>
 </body>
