--- a/index.html
+++ b/index.html
@@ -14,28 +14,26 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 col-md-12 col-xs-12 mx-auto">
-                    <ul>
-                        <li>
-                            <a href="" class="active">
-                                Lorem
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                Lorem
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                Lorem
-                            </a>
-                        </li>
-                        <li>
-                            <a href="">
-                                Lorem
-                            </a>
-                        </li>
-                    </ul>
+                    <div class="menuItem">
+                    <form class="active" action="/">
+                        <input type="submit" value="Home" />
+                    </form>
+                    </div>
+                    <div class="menuItem">
+                    <form class="nonactive" action="aboutSite.html">
+                        <input type="submit" value="About Site" />
+                    </form>
+                    </div>
+                    <div class="menuItem">
+                    <form class="nonactive" action="addition.html">
+                        <input type="submit" value="Addition" />
+                    </form>
+                    </div>
+                    <div class="menuItem">
+                    <form class="nonactive" action="methods.html">
+                        <input type="submit" value="Methods" />
+                    </form>
+                    </div>
                 </div>
             </div>
         </div>
@@ -53,13 +51,13 @@
     <main>
         <div class="container">
             <div class="row">
-                <div  class="col-sm-4 col-md-4 col-xs-4 mx-auto">
+                <div  class="col-sm-12 col-md-4 col-xs-4 mx-auto">
                     <div class="imageBoard">
                         <img src="src/0Lh4vbd2yOw.jpg" alt="">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem saepe exercitationem atque, officia nemo nobis?</p>
                     </div>
                 </div>
-                <div  class="col-sm-4 col-md-4 col-xs-4 mx-auto">
+                <div  class="col-sm-12 col-md-4 col-xs-4 mx-auto">
                     <div class="imageBoard">
                         <img src="src/0Lh4vbd2yOw.jpg" alt="">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem saepe exercitationem atque, officia nemo nobis?</p>
@@ -78,25 +76,25 @@
                     <h5 style="margin: 20px; text-transform: uppercase; width: auto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit totam, id temporibus hic nostrum dolor assumenda!</h5>    
                 </div>
                 <div class="col-sm-12 col-md-12 col-xs-12 mx-auto">
-                    <iframe style="margin: 20px" width="560" height="315" src="https://www.youtube.com/embed/skl6N3zGv-s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe style="margin: 20px" width="auto" height="auto" src="https://www.youtube.com/embed/3_MxhSS86oU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </div>
             <hr />
             <div class="circles">
                 <div class="row">
-                    <div class="col-sm-12 col-md-3 col-xs-3 mx-auto">
+                    <div class="col-sm-6 col-md-3 col-xs-3 mx-auto">
                         <h6>A</h6>
                         <p>Lorem ipsum dolor sit amet.</p>
                     </div>
-                    <div class="col-sm-12 col-md-3 col-xs-3 mx-auto">
+                    <div class="col-sm-6 col-md-3 col-xs-3 mx-auto">
                         <h6>A</h6>
                         <p>Lorem ipsum dolor sit amet.</p>
                     </div>
-                    <div class="col-sm-12 col-md-3 col-xs-3 mx-auto">
+                    <div class="col-sm-6 col-md-3 col-xs-3 mx-auto">
                         <h6>A</h6>
                         <p>Lorem ipsum dolor sit amet.</p>
                     </div>
-                    <div class="col-sm-12 col-md-3 col-xs-3 mx-auto">
+                    <div class="col-sm-6 col-md-3 col-xs-3 mx-auto">
                         <h6>A</h6>
                         <p>Lorem ipsum dolor sit amet.</p>
                     </div>
@@ -105,8 +103,17 @@
         </div>
     </main>
     <footer>
-        <div>
-            
+        <div class="container">
+            <div class="row">
+                <div class="col-sm 12 col-md 6 col-xs 6">
+                    <p>Copyright &#169;</p>
+                    <p>All rights reserved</p>
+                </div>
+                <div class="col-sm 12 col-md 6 col-xs 6">
+                    <p>Our contacts:</p>
+                    <mailto>trrt1004@gmail.com</mailto>
+                </div>
+            </div>
         </div>
     </footer>
 </body>
