--- a/aboutSite.html
+++ b/aboutSite.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="style.css" />
-    <title>Site</title>
+    <link rel="icon" href="src/barIcon.jpeg">
+    <title>About Site</title>
 </head>
 <body>
     <nav>
