--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="style.css" />
-    <title>Site</title>
+    <link rel="icon" href="src/barIcon.jpeg">
+    <title>Home</title>
 </head>
 <body>
     <nav>
@@ -15,7 +16,7 @@
             <div class="row">
                 <div class="col-sm-12 col-md-12 col-xs-12 mx-auto">
                     <div class="menuItem">
-                    <form class="active" action="/">
+                    <form class="active" action="index.html">
                         <input type="submit" value="Home" />
                     </form>
                     </div>
